--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -3,7 +3,7 @@
   height: 80%;
   width: 100%;
   display: flex;
-  color: #ffffff;
+  color: #f3f4f6;
   padding: 4vw 4vw;
 }
 
@@ -41,12 +41,12 @@
 }
 
 /* .apply-button { */
-  /* background-color: #6b5b95;
+/* background-color: #6b5b95;
   color: #fff; */
 /* } */
 
 /* .apply-button:hover { */
-  /* background-color: #7a5b95; */
+/* background-color: #7a5b95; */
 /* } */
 
 /* temp btn css start */
@@ -59,9 +59,9 @@
   text-align: center;
   text-decoration: none;
   background-color: #007bff;
-  color: #fff; 
-  border: 2px solid #007bff; 
-  border-radius: 4px; 
+  color: #fff;
+  border: 2px solid #007bff;
+  border-radius: 4px;
   cursor: pointer;
 }
 
@@ -69,9 +69,8 @@
   background-color: #0056b3;
 }
 
-
 .temp-button:active {
-  background-color: #003c80; 
+  background-color: #003c80;
 }
 /* temp btn css end */
 
@@ -103,7 +102,7 @@
 
 .left p {
   font-family: 'IBM Plex Mono', monospace;
-  font-size: 20px;
+  font-size: 18px;
   margin-top: 2vw;
   margin-bottom: 3vw;
 }
@@ -153,4 +152,7 @@
     border-radius: 2.5vw;
     font-weight: 600;
   }
+}
+.temp-button > a {
+  font-family: 'IBM Plex Mono', monospace;
 }
